--- a/package.json
+++ b/package.json
@@ -4,11 +4,30 @@
   "description": "My Blog",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev": "NODE_ENV=development node main.js",
+    "prod": "NODE_ENV=production node main.js"
   },
-  "author": "",
+  "author": "Lorenzo Olivier",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "express": "^4.16.4",
     "lodash": "^4.17.11"
-  }
+  },
+  "devDependencies": {
+    "easy-livereload": "^1.3.2",
+    "node-dev": "^3.1.3"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/sidvecious/starter-web.git"
+  },
+  "keywords": [
+    "[]"
+  ],
+  "bugs": {
+    "url": "https://github.com/sidvecious/starter-web/issues"
+  },
+  "homepage": "https://github.com/sidvecious/starter-web#readme"
 }
