New works with hashing

--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
   "author": "Lorenzo Olivier",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^3.0.6",
     "body-parser": "^1.18.3",
+    "cookie-parser": "^1.4.4",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
+    "express-crypto": "1.0.5",
     "lodash": "^4.17.11"
   },
   "devDependencies": {
