--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-crypto": "1.0.5",
-    "lodash": "^4.17.11"
+    "lodash": "^4.17.14",
+    "normalize.css": "^8.0.1"
   },
   "devDependencies": {
     "easy-livereload": "^1.3.2",
