--- a/package.json
+++ b/package.json
@@ -16,11 +16,12 @@
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-crypto": "1.0.5",
-    "lodash": "^4.17.14",
+    "lodash": "^4.17.20",
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
-    "easy-livereload": "^1.3.2",
+    "easy-livereload": "^1.4.2",
+    "minimist": "^1.2.5",
     "node-dev": "^3.1.3"
   },
   "repository": {
