--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Lorenzo Olivier",
   "license": "ISC",
   "dependencies": {
-    "bcrypt": "^3.0.6",
+    "audit": "0.0.6",
+    "bcrypt": "^3.0.8",
     "body-parser": "^1.18.3",
     "bufferutil": "^4.0.1",
     "cookie-parser": "^1.4.4",
